// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render channel 1`] = `
<View>
  <View
    accessibilityLabel="general, last message Nov 10"
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={null}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          undefined,
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "#00BCD4",
              "borderRadius": 4,
              "height": 48,
              "width": 48,
            },
            Object {
              "marginHorizontal": 15,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 30,
                "fontWeight": "800",
              },
            ]
          }
        >
          G
        </Text>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "height": "100%",
            "marginRight": 4,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 5,
              "width": "100%",
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "subscription_hashtag",
              }
            }
            style={
              Array [
                Object {
                  "marginRight": 7,
                  "marginTop": 3,
                },
                undefined,
                Object {
                  "height": 10,
                  "width": 10,
                },
              ]
            }
          />
          <Text
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#0C0D0F",
                  "flex": 1,
                  "fontSize": 18,
                  "fontWeight": "400",
                  "marginRight": 5,
                  "paddingBottom": 0,
                  "paddingTop": 0,
                },
                undefined,
              ]
            }
          >
            general
          </Text>
          <Text
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#9EA2A8",
                  "fontSize": 14,
                  "fontWeight": "normal",
                  "paddingBottom": 0,
                  "paddingTop": 0,
                },
                undefined,
              ]
            }
          >
            Nov 10
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Text
            numberOfLines={2}
            style={
              Object {
                "color": "#9EA2A8",
                "flex": 1,
                "fontSize": 15,
                "fontWeight": "normal",
              }
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "marginLeft": 6,
            "marginRight": 9,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "disclosure_indicator",
            }
          }
          style={
            Object {
              "height": 20,
              "width": 20,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`render no icon 1`] = `
<View>
  <View
    accessibilityLabel="name, last message Nov 10"
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={null}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          undefined,
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "#3F51B5",
              "borderRadius": 4,
              "height": 48,
              "width": 48,
            },
            Object {
              "marginHorizontal": 15,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 30,
                "fontWeight": "800",
              },
            ]
          }
        >
          N
        </Text>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "height": "100%",
            "marginRight": 4,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 5,
              "width": "100%",
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "subscription_lock",
              }
            }
            style={
              Array [
                Object {
                  "marginRight": 7,
                  "marginTop": 3,
                },
                undefined,
                Object {
                  "height": 10,
                  "width": 10,
                },
              ]
            }
          />
          <Text
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#0C0D0F",
                  "flex": 1,
                  "fontSize": 18,
                  "fontWeight": "400",
                  "marginRight": 5,
                  "paddingBottom": 0,
                  "paddingTop": 0,
                },
                undefined,
              ]
            }
          >
            name
          </Text>
          <Text
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#9EA2A8",
                  "fontSize": 14,
                  "fontWeight": "normal",
                  "paddingBottom": 0,
                  "paddingTop": 0,
                },
                undefined,
              ]
            }
          >
            Nov 10
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Text
            numberOfLines={2}
            style={
              Object {
                "color": "#9EA2A8",
                "flex": 1,
                "fontSize": 15,
                "fontWeight": "normal",
              }
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "marginLeft": 6,
            "marginRight": 9,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "disclosure_indicator",
            }
          }
          style={
            Object {
              "height": 20,
              "width": 20,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`render private group 1`] = `
<View>
  <View
    accessibilityLabel="private-group, last message Nov 10"
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={null}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          undefined,
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "#FF9800",
              "borderRadius": 4,
              "height": 48,
              "width": 48,
            },
            Object {
              "marginHorizontal": 15,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 30,
                "fontWeight": "800",
              },
            ]
          }
        >
          P
        </Text>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "height": "100%",
            "marginRight": 4,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 5,
              "width": "100%",
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "subscription_lock",
              }
            }
            style={
              Array [
                Object {
                  "marginRight": 7,
                  "marginTop": 3,
                },
                undefined,
                Object {
                  "height": 10,
                  "width": 10,
                },
              ]
            }
          />
          <Text
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#0C0D0F",
                  "flex": 1,
                  "fontSize": 18,
                  "fontWeight": "400",
                  "marginRight": 5,
                  "paddingBottom": 0,
                  "paddingTop": 0,
                },
                undefined,
              ]
            }
          >
            private-group
          </Text>
          <Text
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#9EA2A8",
                  "fontSize": 14,
                  "fontWeight": "normal",
                  "paddingBottom": 0,
                  "paddingTop": 0,
                },
                undefined,
              ]
            }
          >
            Nov 10
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Text
            numberOfLines={2}
            style={
              Object {
                "color": "#9EA2A8",
                "flex": 1,
                "fontSize": 15,
                "fontWeight": "normal",
              }
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "marginLeft": 6,
            "marginRight": 9,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "disclosure_indicator",
            }
          }
          style={
            Object {
              "height": 20,
              "width": 20,
            }
          }
        />
      </View>
    </View>
  </View>
   
</View>
`;

exports[`render unread +999 1`] = `
<View>
  <View
    accessibilityLabel="name, 1000 alerts, last message Nov 10"
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={null}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          undefined,
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "#3F51B5",
              "borderRadius": 4,
              "height": 48,
              "width": 48,
            },
            Object {
              "marginHorizontal": 15,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 30,
                "fontWeight": "800",
              },
            ]
          }
        >
          N
        </Text>
        <View
          style={
            Array [
              Array [
                Object {
                  "position": "absolute",
                },
                Object {
                  "borderRadius": 4,
                  "height": 48,
                  "width": 48,
                },
              ],
              Object {
                "overflow": "hidden",
              },
            ]
          }
        >
          <FastImageView
            resizeMode="cover"
            source={
              Object {
                "priority": "high",
                "uri": "/avatar/name",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "height": "100%",
            "marginRight": 4,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 5,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderRadius": 16,
                  "height": 16,
                  "width": 16,
                },
                Array [
                  Object {
                    "borderRadius": 10,
                    "height": 10,
                    "marginRight": 7,
                    "marginTop": 3,
                    "width": 10,
                  },
                ],
                Object {
                  "backgroundColor": undefined,
                },
              ]
            }
          />
          <Text
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#0C0D0F",
                  "flex": 1,
                  "fontSize": 18,
                  "fontWeight": "400",
                  "marginRight": 5,
                  "paddingBottom": 0,
                  "paddingTop": 0,
                },
                undefined,
              ]
            }
          >
            name
          </Text>
          <Text
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#9EA2A8",
                  "fontSize": 14,
                  "fontWeight": "normal",
                  "paddingBottom": 0,
                  "paddingTop": 0,
                },
                undefined,
              ]
            }
          >
            Nov 10
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Text
            numberOfLines={2}
            style={
              Object {
                "color": "#9EA2A8",
                "flex": 1,
                "fontSize": 15,
                "fontWeight": "normal",
              }
            }
          >
            
          </Text>
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#1D74F5",
                "borderRadius": 4,
                "justifyContent": "center",
                "minWidth": 23,
                "padding": 3,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.56,
                  "overflow": "hidden",
                }
              }
            >
              999+
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "marginLeft": 6,
            "marginRight": 9,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "disclosure_indicator",
            }
          }
          style={
            Object {
              "height": 20,
              "width": 20,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`render unread 1`] = `
<View>
  <View
    accessibilityLabel="name, 1 alert, last message Nov 10"
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={null}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          undefined,
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "#3F51B5",
              "borderRadius": 4,
              "height": 48,
              "width": 48,
            },
            Object {
              "marginHorizontal": 15,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 30,
                "fontWeight": "800",
              },
            ]
          }
        >
          N
        </Text>
        <View
          style={
            Array [
              Array [
                Object {
                  "position": "absolute",
                },
                Object {
                  "borderRadius": 4,
                  "height": 48,
                  "width": 48,
                },
              ],
              Object {
                "overflow": "hidden",
              },
            ]
          }
        >
          <FastImageView
            resizeMode="cover"
            source={
              Object {
                "priority": "high",
                "uri": "/avatar/name",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "height": "100%",
            "marginRight": 4,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 5,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderRadius": 16,
                  "height": 16,
                  "width": 16,
                },
                Array [
                  Object {
                    "borderRadius": 10,
                    "height": 10,
                    "marginRight": 7,
                    "marginTop": 3,
                    "width": 10,
                  },
                ],
                Object {
                  "backgroundColor": undefined,
                },
              ]
            }
          />
          <Text
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#0C0D0F",
                  "flex": 1,
                  "fontSize": 18,
                  "fontWeight": "400",
                  "marginRight": 5,
                  "paddingBottom": 0,
                  "paddingTop": 0,
                },
                undefined,
              ]
            }
          >
            name
          </Text>
          <Text
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#9EA2A8",
                  "fontSize": 14,
                  "fontWeight": "normal",
                  "paddingBottom": 0,
                  "paddingTop": 0,
                },
                undefined,
              ]
            }
          >
            Nov 10
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Text
            numberOfLines={2}
            style={
              Object {
                "color": "#9EA2A8",
                "flex": 1,
                "fontSize": 15,
                "fontWeight": "normal",
              }
            }
          >
            
          </Text>
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#1D74F5",
                "borderRadius": 4,
                "justifyContent": "center",
                "minWidth": 23,
                "padding": 3,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.56,
                  "overflow": "hidden",
                }
              }
            >
              1
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "marginLeft": 6,
            "marginRight": 9,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "disclosure_indicator",
            }
          }
          style={
            Object {
              "height": 20,
              "width": 20,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`renders correctly 1`] = `
<View>
  <View
    accessibilityLabel="name, last message Nov 10"
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={null}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          undefined,
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "#3F51B5",
              "borderRadius": 4,
              "height": 48,
              "width": 48,
            },
            Object {
              "marginHorizontal": 15,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 30,
                "fontWeight": "800",
              },
            ]
          }
        >
          N
        </Text>
        <View
          style={
            Array [
              Array [
                Object {
                  "position": "absolute",
                },
                Object {
                  "borderRadius": 4,
                  "height": 48,
                  "width": 48,
                },
              ],
              Object {
                "overflow": "hidden",
              },
            ]
          }
        >
          <FastImageView
            resizeMode="cover"
            source={
              Object {
                "priority": "high",
                "uri": "/avatar/name",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "height": "100%",
            "marginRight": 4,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 5,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderRadius": 16,
                  "height": 16,
                  "width": 16,
                },
                Array [
                  Object {
                    "borderRadius": 10,
                    "height": 10,
                    "marginRight": 7,
                    "marginTop": 3,
                    "width": 10,
                  },
                ],
                Object {
                  "backgroundColor": undefined,
                },
              ]
            }
          />
          <Text
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#0C0D0F",
                  "flex": 1,
                  "fontSize": 18,
                  "fontWeight": "400",
                  "marginRight": 5,
                  "paddingBottom": 0,
                  "paddingTop": 0,
                },
                undefined,
              ]
            }
          >
            name
          </Text>
          <Text
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#9EA2A8",
                  "fontSize": 14,
                  "fontWeight": "normal",
                  "paddingBottom": 0,
                  "paddingTop": 0,
                },
                undefined,
              ]
            }
          >
            Nov 10
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Text
            numberOfLines={2}
            style={
              Object {
                "color": "#9EA2A8",
                "flex": 1,
                "fontSize": 15,
                "fontWeight": "normal",
              }
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "marginLeft": 6,
            "marginRight": 9,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "disclosure_indicator",
            }
          }
          style={
            Object {
              "height": 20,
              "width": 20,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;
